--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,13 +5,14 @@ jobs:
     name: Build our App
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v2
+      - name: Pull code
+      - uses: actions/checkout@v2
+      - name: Print current directory
+      - run: pwd
+      - name: List files
+      - run: ls
 #      - uses: actions/setup-node@v2
 #        with:
 #          node-version: '14'
 #      - run: npm install -g bats
 #      - run: bats -v
-      - name: Print current directory
-      - run: pwd
-      - name: List files in directory
-      - run: ls
