--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,12 +7,8 @@ jobs:
     steps:
       - name: Pull code
       - uses: actions/checkout@v2
-      - name: Print current directory
-      - run: pwd
-      - name: List files
-      - run: ls
-#      - uses: actions/setup-node@v2
-#        with:
-#          node-version: '14'
-#      - run: npm install -g bats
-#      - run: bats -v
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
