--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: pwd
-      - run: ls 
+      - run: dotnet build
+      - run: npm -v 
