--- a/TrickingLibrary.Api/TrickingLibrary.Api.csproj
+++ b/TrickingLibrary.Api/TrickingLibrary.Api.csproj
@@ -45,7 +45,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models" />
     <Folder Include="wwwroot" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TrickingLibrary.Data\TrickingLibrary.Data.csproj" />
   </ItemGroup>
 
 </Project>
